26.46. Fixed a bug with scrollbar layout shift when toggling modal window

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scrollbar-gutter: stable;
+}
+
 body {
   overflow-y: scroll;
 }
@@ -122,4 +126,3 @@ body {
 .ql-blockquote:hover {
   @apply dark:hover:!text-quill-btn_hover;
 }
-
